feat(search) : add findall, findByKeyword methods